[package]
name = "ccli"
version = "0.1.0"
edition = "2024"
description = "Compatible LLM CLI - switch LLM providers for Claude Code with ease"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
uuid = { version = "1", features = ["v4"] }
